Fix horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,9 @@
 
 body {
     font-family:'Bebas Neue', cursive;
+    overflow-x: hidden;
 }
+
 
 /*------------beginning navbar----------*/
 
